force-app/main/default/objects/UHITRequest__c/UHITRequest__c.object-meta.xml
<CustomObject>
    <label>UHITRequest</label>
    <nameField>
        <label>UHITRequest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UHITRequest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>