force-app/main/default/objects/UHITRequest__c/fields/APA__c.field-meta.xml
<CustomField>
    <fullName>APA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APA</label>
    <referenceTo>AccountPremiseAssociation__c</referenceTo>
    <relationshipLabel>UHITRequest</relationshipLabel>
    <relationshipName>UHITRequest</relationshipName>
    <type>Lookup</type>
</CustomField>