force-app/main/default/objects/UHITRequest__c/fields/ESID__c.field-meta.xml
<CustomField>
    <fullName>ESID__c</fullName>
    <label>ESID</label>
    <length>22</length>
    <type>Text</type>
</CustomField>