force-app/main/default/objects/UHITRequest__c/fields/StatusDesc__c.field-meta.xml
<CustomField>
    <fullName>StatusDesc__c</fullName>
    <label>StatusDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>